- Remove feature is available - Update feature is available (need some tweaking) - Add feature also became available on some pages + Cascade delete still not working as intended - needs further investigation + Decide on what to do with unnecessary dates in author and art object